fixing the double title on mobile screen

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body{
       width: 100%;
       height: 100%;
       background-color: #F8F8F8;
+      border-top: 1px solid #D9FFF5;
     }
 
     .swiper-slide {
@@ -88,7 +89,7 @@ body{
       align-items: center;
       border: 1px solid rgb(231, 231, 231);
       border-radius: 6px;
-      margin: 0 0 30px 20px;
+      margin: 30px 0 30px 20px;
       padding: 10px;
       width: 240px;
       height: 72px;
@@ -107,6 +108,9 @@ body{
 
     .swiper{
         display: block;
+    }
+    .brands-title-for-tablet{
+        display: none;
     }
 
 }
